# price_correlation

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Clustering Stocks by Price Correlation (Last 18 Months).txt  Dockerfile  README-WEB.md  README.md  TASKS.md  cli.py  docker-compose.yml  gemini_research.md  pyproject.toml  run.py  run_fmp.py
.pipeline_state/: tickers.pkl  universe.pkl
config/: default.yaml  exclusions.yaml  sample_filtered.yaml  sample_smallcap.yaml
docs/: DESIGN.md
docs/tasks/: 00_OVERVIEW.md  01_package_structure.md  02_dependencies.md  03_universe.md  04_ingestion.md  05_preprocess.md  06_correlation.md  07_clustering.md  08_validation.md  09_export.md  10_pipeline.md  11_tests.md  12_clustering_optimization.md  12_fmp_universe.md  13_unified_cli.md  14_web_stock_filters.md
scripts/: build_exclusions.py  init_timescaledb.sql  migrate_add_clustering_method.sql
src/price_correlation/: __init__.py  cache.py  clustering.py  correlation.py  db.py  exclusions.py  export.py  fmp_client.py  ingestion.py  pipeline.py  pipeline_state.py  pipeline_steps.py  preprocess.py  universe.py  validation.py  web.py
src/price_correlation/templates/: base.html  charts.html  clusters.html  compare.html  correlations.html  index.html  pipeline.html  steps.html  stock_detail.html
tests/: __init__.py  test_cache_integration.py  test_db_integration.py  test_integration.py
