[project]
name = "price_correlation"
version = "0.1.0"
description = "Stock clustering system for identifying correlated equities across NYSE/NASDAQ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=14.0.0",
    "yfinance>=0.2.30",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "flask>=3.0.0",
    "gunicorn>=21.0.0",
    "lxml>=4.9.0",
    "hdbscan>=0.8.33",
    "python-louvain>=0.16",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]
full = [
    "tslearn>=0.6.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/price_correlation"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
